test/corpus/structs_and_classes.txt
==================
Plain struct
==================

struct Point {
    x: i64
    y: i64
}

---

(source_file
  (function_definition
    (identifier)
    (parameter_list)
    (primitive_type)
    (block
      (return_statement (number)))))
