test/corpus/weak/question_mark_required.txt
================================================================================
Weak Question Mark Required ID=4PDVENH
================================================================================

/// Expect:
/// - error: "missing `?` after weak pointer type name\n"

class Foo {

}

fn main() {

   mut foo: weak Foo = None

   println("Oh no!")

}

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (line_comment)
  (class_declaration
    (type_identifier)
    (field_declaration_list))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (mutable_declaration
        (mutable_specifier)
        (identifier)
        (weak_specifier)
        (type_identifier)
        (none_expression))
      (call_expression
        (identifier)
        (arguments
          (argument
            (string_literal)))))))
